welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:18: error: value Red is not a member of object java.awt.Color
	faireFleur(Color.Red)
                         ^